No need to expose LinkedList since removeFirst can be replaced with remove(0)